# zllm

./: .gitignore  README.md  benchmark.py  check_dequant.py  compare_embeddings.py  debug_all_layers.py  debug_attention.py  debug_compare.py  debug_embedding.py  debug_final.py  debug_inference.py  debug_layer.py  debug_layer0_detail.py  debug_lmhead.py  debug_lmhead_detail.py  debug_native.py  debug_q4k.py  debug_qk_vectors.py  debug_reshape.py  debug_single_forward.py  debug_transpose.py  progress.md  pyproject.toml  test_compare.py  test_dequant.py  test_inference.py  test_modal.py
scripts/: debug_shapes.py  test_inference.py
tests/: __init__.py  test_batching.py  test_e2e.py  test_engine.py  test_flash_attention.py  test_speculative.py
ui/: package.json  tailwind.config.js  vite.config.js
ui/src/: app.css  app.html
ui/src/routes/: +layout.svelte  +page.svelte
ui/src/routes/keys/: +page.svelte
ui/src/routes/models/: +page.svelte
ui/src/routes/monitor/: +page.svelte
ui/src/routes/settings/: +page.svelte
zllm/: __init__.py  __main__.py  cli.py
zllm/backends/: __init__.py  gguf.py
zllm/cache/: __init__.py  base.py  memory.py  semantic.py
zllm/core/: __init__.py  batching.py  config.py  engine.py  flash_attention.py  generation.py  kv_cache.py  memory.py  orchestrator.py  speculative.py
zllm/engine/: __init__.py  cuda_kernels.py  gguf_parser.py  inference.py  llama_cpp_backend.py  quantization.py  tokenizer.py
zllm/hardware/: __init__.py  auto_detect.py  base.py
zllm/models/: __init__.py  hub.py  loader.py  registry.py
zllm/quantization/: __init__.py  auto.py  base.py
zllm/server/: __init__.py  api.py
